# Pepper

./: CMakeLists.txt  CMakePresets.json
.github/workflows/: build.yaml
boot/: CMakeLists.txt  boot.cc  efi.cc  efi.hh
cmake/: AddEfiExecutable.cmake  toolchain-x86_64-pc-none-clang.cmake
kernel/: CMakeLists.txt  kernel.ld  kmain.cc
nstd/: CMakeLists.txt  array  cstddef  cstdint
